[gd_scene load_steps=3 format=3 uid="uid://b1o2irqdprjuq"]

[ext_resource type="Texture2D" uid="uid://crqnsoe36epqk" path="res://PNG/playerShip1_blue.png" id="1_27ktq"]
[ext_resource type="Script" path="res://scenes/player.gd" id="1_t53wh"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_t53wh")

[node name="PlayerImage" type="Sprite2D" parent="."]
texture = ExtResource("1_27ktq")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, -37, 7, -37, 12, -12, 36, 2, 48, -6, 46, 24, 14, 28, 7, 38, -7, 38, -14, 28, -45, 24, -48, -6, -37, 2, -12, -12)

[node name="LaserStartPosition" type="Marker2D" parent="."]
position = Vector2(0, -46)

[node name="LaserTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
